fix todo text overflow, clean up code

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -17,7 +17,3 @@ h1, h3 {
   border: solid 1px;
   margin-bottom: 2px;
 }
-
-.complete {
-  color: #c4c4c4 
-}
